--- a/home.html
+++ b/home.html
@@ -3,11 +3,6 @@
 <p>test</p>
 <p>git satsh</p>
 
+<p>git satsh</p>
+
 <p>git satsh1</p>
-<p>git satsh1</p>
-
-<p>git テスト修正2</p>
-
-<p>git 戻り確認1</p>
-
-<p>stashの確認</p>
